# docvector

./: .env.example  .gitignore  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CONTEXT7_FEATURES.md  Dockerfile  EMBEDDING_IMPLEMENTATION_GUIDE.md  EMBEDDING_STRATEGY_EXECUTIVE_SUMMARY.md  EMBEDDING_STRATEGY_RESEARCH.md  EMBEDDING_TCO_CALCULATOR.md  GCP_COST_ESTIMATE.md  GCP_CRAWLING_INFRASTRUCTURE.md  Makefile  PRIORITY_LIST.md  README.md  TESTING_GUIDE.md  TESTING_PERFORMANCE.md  VECTOR_DB_GCP_RESEARCH.md  alembic.ini  docker-compose.yml  implementation_roadmap.md  init_db.py  library_indexing_research.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start.sh  top_100_libraries.csv
.github/workflows/: tests.yml
docs/: API_DESIGN.md  COST_OPTIMIZATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  SEARCH_QUALITY_METRICS.md  TECH_STACK.md
src/docvector/: __init__.py  core.py  mcp_server.py  models.py
src/docvector/api/: dependencies.py  main.py
src/docvector/api/routes/: __init__.py  health.py  ingestion.py  jobs.py  libraries.py  search.py  sources.py
src/docvector/api/schemas/: __init__.py  common.py  ingestion.py  job.py  search.py  source.py
src/docvector/cache/: __init__.py  redis_cache.py
src/docvector/core/: __init__.py  config.py  exceptions.py  logging.py
src/docvector/db/: __init__.py  session.py
src/docvector/db/migrations/: env.py
src/docvector/db/migrations/versions/: 001_initial_schema.py  002_context7_features.py  004_qa_external_sources.py
src/docvector/db/repositories/: __init__.py  chunk_repo.py  document_repo.py  source_repo.py
src/docvector/embeddings/: __init__.py  base.py  cache.py  local_embedder.py  openai_embedder.py
src/docvector/ingestion/: __init__.py  base.py  crawl4ai_crawler.py  web_crawler.py
src/docvector/mcp/: server.py
src/docvector/models/: __init__.py  base.py  chunk.py  document.py  job.py  source.py
src/docvector/processing/: __init__.py  code_extractor.py  enrichment.py  pipeline.py
src/docvector/processing/chunkers/: __init__.py  base.py  fixed_size.py  semantic.py
src/docvector/processing/parsers/: __init__.py  base.py  html.py  markdown.py
src/docvector/queue/: __init__.py  job_queue.py  job_repository.py
src/docvector/search/: __init__.py  hybrid_search.py  reranker.py  vector_search.py
src/docvector/services/: __init__.py  ingestion_service.py  library_service.py  search_service.py  source_service.py
src/docvector/utils/: __init__.py  hash_utils.py  text_utils.py  token_utils.py
src/docvector/vectordb/: __init__.py  base.py  qdrant_client.py
src/docvector/worker/: __init__.py  crawl_worker.py
tests/: README.md  conftest.py
tests/api/: test_api.py
tests/integration/: test_processing_pipeline.py
tests/unit/: test_chunkers.py  test_parsers.py  test_search.py  test_utils.py  test_vectordb.py  test_web_crawler.py
web/src/app/: page.tsx
web/src/app/billing/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/api-keys/: page.tsx
web/src/app/dashboard/sources/: page.tsx
web/src/app/login/: page.tsx
web/src/app/logo-options/: page.tsx
web/src/app/register/: page.tsx
web/src/app/search/: page.tsx
web/src/components/layout/: navbar.tsx
web/src/components/ui/: input.tsx  logo.tsx
