[tool.poetry]
name = "docvector"
version = "0.1.0"
description = "Self-hostable documentation vector search and indexing system for AI agents"
authors = ["DocVector Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-org/docvector"
repository = "https://github.com/your-org/docvector"
keywords = ["vector-search", "documentation", "rag", "ai-agents", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
# Web framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# Vector database
qdrant-client = "^1.7.0"

# Redis
redis = "^5.0.1"
hiredis = "^2.3.2"

# Task queue
celery = "^5.3.4"

# ML/Embeddings
sentence-transformers = "^2.2.2"
torch = "^2.1.2"
transformers = "^4.36.0"

# Optional embedding providers
openai = {version = "^1.10.0", optional = true}
cohere = {version = "^4.37", optional = true}

# Web scraping
aiohttp = "^3.9.1"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.2"
trafilatura = "^1.6.3"
lxml = "^5.1.0"

# Document parsing
pypdf = "^3.17.4"
python-docx = "^1.1.0"
markdown-it-py = "^3.0.0"
python-magic = "^0.4.27"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# Utilities
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
click = "^8.1.7"

# Monitoring
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0", optional = true}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

# Code quality
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

# Type stubs
types-PyYAML = "^6.0.12.12"
types-redis = "^4.6.0.11"
types-passlib = "^1.7.7.20240106"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.6"

# Development tools
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.poetry.extras]
openai = ["openai"]
cohere = ["cohere"]
sentry = ["sentry-sdk"]
all = ["openai", "cohere", "sentry-sdk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==============================================================================
# TOOL CONFIGURATIONS
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "trafilatura.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=docvector --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
